Fixed bug #42261 (header wrong for date field).